@@ -15,7 +15,7 @@
 
 <html>
 <head>
-  <%@ include file="/WEB-INF/jspf/pageHeadWithoutRssLink.jspf" %>
+  <%@ include file="/WEB-INF/jspf/pageHead.jspf" %>
   <link rel="stylesheet" type="text/css" href="${pageContext.request.contextPath}/css/config.css">
   <title><spring:message code="window.title.default"/></title>
 
