@@ -18,6 +18,7 @@
 <html>
 <head>
   <%@ include file="/WEB-INF/jspf/pageHead.jspf" %>
+  <%@ include file="/WEB-INF/jspf/pageHeadRssLink.jspf"%>
   <title>Diff View</title>
 </head>
 
