@@ -1,26 +1,0 @@
-<%
-/*
- * ====================================================================
- * Copyright (c) 2005-2010 sventon project. All rights reserved.
- *
- * This software is licensed as described in the file LICENSE, which
- * you should have received as part of this distribution. The terms
- * are also available at http://www.sventon.org.
- * If newer versions of this license are posted there, you may use a
- * newer version instead, at your option.
- * ====================================================================
- */
-%>
-<meta name="ROBOTS" content="nofollow">
-<meta name="Googlebot" content="nofollow">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="${pageContext.request.contextPath}/css/sventon.css">
-<link rel="shortcut icon" href="${pageContext.request.contextPath}/images/favicon.ico" type="image/x-icon">
-<link rel="icon" href="${pageContext.request.contextPath}/images/favicon.ico" type="image/x-icon">
-<script language="javascript" type="text/javascript">
-  var contextPath = "${pageContext.request.contextPath}";
-</script>
-<script language="javascript" src="${pageContext.request.contextPath}/js/sventon.js" type="text/javascript"></script>
-<script language="javascript" src="${pageContext.request.contextPath}/js/prototype.js" type="text/javascript"></script>
-<script language="javascript" src="${pageContext.request.contextPath}/js/scriptaculous.js?load=effects" type="text/javascript"></script>
-<base href="<%=org.sventon.util.WebUtils.extractBaseURLFromRequest(request)%>">
